--- a/src/main/webapp/WEB-INF/pages/index.vm
+++ b/src/main/webapp/WEB-INF/pages/index.vm
@@ -64,6 +64,16 @@
 									Relax Spa</strong></a>
 						</div>
 					</div>
+					<div class="col-lg-9 col-md-9">
+						<div class="hlinks pull-right">
+            <ul>
+              <li> <a href="cart.html"> <i class="fa fa-shopping-cart"></i> Shoping Cart</a></li>
+              <li><a href="register.html">Sign up</a></li>
+              <li><a href="#">Log In</a></li>
+             
+            </ul>
+          </div>
+          </div>
 				</div>
 				<div class="row">
 
