--- a/src/main/webapp/WEB-INF/pages/product-details.vm
+++ b/src/main/webapp/WEB-INF/pages/product-details.vm
@@ -27,7 +27,7 @@
 
     
     <!-- /. Header Start ./-->
-  		<header id="header">
+  		<header id="header" class="sticky">
   			<div class="">
   				<div class="row header-logo header-container">
   					<div class="col-lg-3 col-md-3">
@@ -40,7 +40,7 @@
   					<div class="col-lg-9 col-md-9">
 						<div class="hlinks pull-right">
             <ul>
-              <li> <a href="cart.html"> <i class="fa fa-shopping-cart"></i> Shoping Cart</a></li>
+              <li> <a href="cart.html"> <i class="fa fa-shopping-cart"></i> Shoping Cart <span id="cart-info"></span> </a></li>
               <li><a href="register.html">Sign up</a></li>
               <li><a href="#">Log In</a></li>
              
@@ -255,7 +255,7 @@
                     </div>
                   </li>
                   <li>
-                    <button class="buyit">Add To Cart</button>
+                    <a target="_blanck" href="cart.html"><button class="buyit" id="buy-bag-btn">Buy It</button></a>
                   </li>
                 </ul>
               </div>
@@ -885,15 +885,37 @@
     </section>
     -->
     <!-- /. Footer Copy rights ./-->
-    
-    <section class="footer-copy">
-      <div class="container">
-        <div class="row">
-          <div class="col-lg-6 left-align">&copy;<strong>Legion Concepts</strong> 2014 All Rights Reserved</div>
+   	<!-- /. Footer Start ./-->
+		  <section id="footer">
+    <section class="footer-logo">
+      <div class="footer-container">
+       <div class="row pull-middle">
+         FOLLOW US
+       </div>
+       <div class="row pull-middle">
+         <a href="#" class="fb-gray small-logo"></a>
+         <a href="#" class="tw-gray small-logo"></a>
+       </div>
+       <div class="row footer-sparator">
+       </div>
+       <div class="row footer-vertical-logo">
+       </div>
+     </div>
+   </section>
+   <section class="footer-copy">
+    <div class="footer-container">
+      <div class="row">
+        <div class="col-lg-6 left-align">&copy;<strong>Legion Concepts</strong> 2014 All Rights Reserved</div>
+        <div class="col-lg-6 pull-right site-footer-links">
+          <a href="#">CONTACT</a>
+          <a href="#">NEWS</a>
+          <a href="#">SITE MAP</a>
+          <a href="#">SUBSCRIBE</a>
         </div>
       </div>
-    </section>
+    </div>
   </section>
+</section>
 
   <!-- /. Footer End ./-->
 
@@ -908,8 +930,12 @@
   <script src="resources/js/jquery.bxslider.min.js"></script><!-- Bx Slider --> 
 
   <script src="resources/js/jquery.prettyPhoto.js" type="text/javascript" charset="utf-8"></script><!-- Pretty Box --> 
-
+ <script src="resources/js/lib/underscore-min.js" type="text/javascript"></script> 
+ 
   <script src="resources/js/jquery-scrolltofixed-min.js" type="text/javascript"></script> 
+ 
   <script src="resources/js/custom.js"></script><!-- Custom -->
+   <script src="resources/js/controller.js"></script>
+    <script src="resources/js/product-detail.js"></script>
   </body>
   </html>
